# sd-pixel-engine

./: Makefile  README.md  pyproject.toml  sd-pixel-engine.spec  sd-screen-shot.spec  test.py
sd_pixel_engine/: __main__.py  capture_window.py  capture_window_new.py  capture_window_test.py  const.py  detect_sleep.py  main.py  screenshot.py  utils.py
sd_pixel_engine/tests/: demo.py
sd_pixel_engine/tests/package/: capture_window_test.py  capture_window_test.spec
sd_pixel_engine/tests/package/capture-window-test/: capture_window_test.py  capture_window_test.spec  run.bat
sd_pixel_engine/tests/package/capture-window-test/tmp/: capture_window_main_copy.py  capture_window_main_new.py  capture_window_main_working_for_one_monitor.py
sd_pixel_engine/tests/package/diagnose-hwnd/: diagnose_hwnd.py  diagnose_hwnd.spec  run.bat
sd_screen_shot/: __main__.py  screenshot.py
