[tool.poetry]
name = "sd-pixel-engine"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"


[tool.poetry.scripts]
sd-pixel-engine = "sd_pixel_engine:main"

[tool.poetry.dependencies]
python = "^3.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
