[tool.poetry]
name = "sd-pixel-engine"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"


[tool.poetry.scripts]
sd-pixel-engine = "sd_pixel_engine:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
pyinstaller = "6.18.0"
pywinctl = "^0.4.1"
mss = "^10.1.0"
pillow = "10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
